--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SERECI-Bot</title>
+    <style>
+        body {
+            background-color: silver;
+            opacity:
+        }
+    </style>
 </head>
+
 <body>
-    <h1>MI CHAT</h1>
-    <iframe src='https://webchat.botframework.com/embed/languate-xor-bot?s=62GiB6Xb-Ls.Xen0lNRDl63vCGRO4bv7ZzpVAgLCegWpYUHd75jxJVQ'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    <div align="center"><img src="LOGO_SERECI.png" width="350" alt="Logo Sereci"></div>
+    <div align="center"><iframe src='https://webchat.botframework.com/embed/languate-xor-bot?s=62GiB6Xb-Ls.Xen0lNRDl63vCGRO4bv7ZzpVAgLCegWpYUHd75jxJVQ'  style='min-width: 400px; width: 80%; min-height: 500px;'></iframe></div>
+    
 </body>
 </html>
