--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <body>
     <div align="center"><img src="LOGO_SERECI.png" width="350" alt="Logo Sereci"></div>
     <div align="center"><iframe src='https://webchat.botframework.com/embed/languate-xor-bot?s=62GiB6Xb-Ls.Xen0lNRDl63vCGRO4bv7ZzpVAgLCegWpYUHd75jxJVQ'  style='min-width: 400px; width: 80%; min-height: 500px;'></iframe></div>
-    
+    <div align="center">© Modulo 5 - UDI Diplomado</div>
 </body>
 </html>
